# eino_cpp

./: .bazelignore  .bazelrc  ADK_COMPOSE_CALLBACKS_MECHANISM.md  ADK_INTERRUPT_DETAILED_GUIDE.md  BUILD.bazel  CALLBACK_FIX_COMPLETE.md  CALLBACK_FIX_SUMMARY.txt  CMakeLists.txt  CONVERT_TO_AGENTEVENT_DETAILED.md  INTERRUPTERROR_CATCH_GUIDE.md  INTERRUPTINFO_TO_AGENTEVENT.md  LICENSE-APACHE  MODULE.bazel  PLAN_EXECUTE_DETAILED_EXAMPLE.md  build.sh  build_and_run_plan_execute.sh  build_tests.sh  compile_branch_node_simple.sh  compile_complete_graph_branch.sh  compile_graph_branch_reference.sh  conanfile.txt  run_branch_node_example.sh  run_graph_stream.sh  run_stream_example.sh  run_tests.sh  运行所有示例.sh
examples/: BUILD.bazel  CMakeLists.txt  CMakeLists_branch_node_graph_example.txt  CMakeLists_temp.txt  RUN_SUMMARY.txt  adk_streaming_agent_example.cpp  basic_chain_example.cpp  branch_node_complete_working_example.cpp  branch_node_example.cpp  branch_node_graph_example.cpp  branch_node_multi_reference_example.cpp  branch_node_reference_example.cpp  branch_node_simple.cpp  branch_node_simple_example.cpp  branch_node_解析详解.cpp  build_and_run_all.sh  build_and_run_dag.sh  build_and_run_graph_json.sh  build_and_run_stream_branch.sh  callback_example.cpp  checkpoint_example.cpp  complete_branch_edge_example.cpp  complete_graph_branch_example.cpp  components_example.cpp  dag_compose_example.cpp  flow_example.cpp  graph_json_branch_tools.cpp  graph_json_complex_conditions.cpp  graph_json_example.cpp  graph_json_minimal.cpp  graph_json_simple_example.cpp  graph_output_stream.cpp  graph_output_stream_simple.cpp  graph_run_example.cpp  graph_stream_branch_example.cpp  graph_stream_pipeline.cpp  graph_validation_demo.cpp  graph_with_branch_reference.cpp  interrupt_state_example.cpp  plan_execute_example.cpp  (+5 more)
examples/build_graph_json/: graph_json_minimal
examples/build_stream_branch/: stream_concept
include/eino/: BUILD.bazel  doc.h
include/eino/adk/: README.h  agent.h  agent_base.h  agent_tool.h  async_iterator.h  call_options.h  callbacks.h  chat_model_agent.h  checkpoint.h  context.h  deterministic_transfer.h  executor.h  flow.h  flow_agent.h  handler.h  interface.h  interrupt.h  prompts.h  react.h  retry_chatmodel.h  runner.h  session.h  stream_utils.h  task_tool.h  tools.h  types.h  utils.h  utils_missing.h  workflow.h  wrappers.h
include/eino/callbacks/: aspect_inject.h  callback.h  handler_template.h  interface.h  manager.h  wrapper.h
include/eino/components/: callback_extra.h  component.h  document.h  embedding.h  indexer.h  interface.h  model.h  model_with_tools.h  openai_chat_model.h  prompt.h  retriever.h  tool.h
include/eino/compose/: branch.h  branch_node.h  chain.h  chain_branch.h  chain_parallel.h  channel.h  checkpoint.h  component_to_graph_node.h  compose.h  dag.h  error.h  field_mapping.h  generic_graph.h  generic_helper.h  graph.h  graph_add_node_options.h  graph_advanced.h  graph_call_options.h  graph_compile_options.h  graph_json.h  graph_json_advanced.h  graph_json_condition_engine.h  graph_manager.h  graph_methods.h  graph_node.h  graph_run.h  graph_validation.h  interrupt.h  introspect.h  node_capabilities.h  pregel.h  resume.h  runnable.h  state.h  stream_concat.h  stream_convert.h  stream_reader.h  tool_node.h  type_registry.h  typed_value.h  (+6 more)
include/eino/flow/: flow.h
include/eino/internal/: channel.h  concat.h  generic.h  gmap.h  gslice.h  merge.h  safe.h  serialization.h  types.h
include/eino/schema/: document.h  message_concat.h  message_format.h  message_parser.h  schema.h  select.h  serialization.h  stream.h  stream_advanced.h  stream_copy.h  tool.h  tool_result.h  types.h
include/eino/utils/: callbacks_template.h  (+1 more)
src/adk/: BUILD.bazel  CMakeLists.txt  agent.cpp  agent_tool.cpp  call_options.cpp  callbacks.cpp  chat_model_agent.cpp  checkpoint.cpp  context.cpp  deterministic_transfer.cpp  executor.cpp  flow.cpp  flow_agent.cpp  instruction.cpp  interface.cpp  interrupt.cpp  prompts.cpp  react.cpp  runctx.cpp  runner.cpp  session.cpp  stream_utils.cpp  task_tool.cpp  tools.cpp  types.cpp  utils.cpp  utils_missing.cpp  workflow.cpp
src/callbacks/: BUILD.bazel  CMakeLists.txt  callback.cpp  handler_builder.cpp  manager.cpp
src/components/: BUILD.bazel  interface.cpp  openai_chat_model.cpp  prompt.cpp  simple_embedder.cpp  simple_loader.cpp  text_splitter.cpp
src/compose/: BUILD.bazel  CMakeLists.txt  branch.cpp  branch_node.cpp  chain.cpp  chain_branch.cpp  chain_parallel.cpp  checkpoint.cpp  component_to_graph_node.cpp  dag.cpp  error.cpp  field_mapping.cpp  generic_graph.cpp  generic_helper.cpp  graph.cpp  graph_add_node_options.cpp  graph_addedge.cpp  graph_call_options.cpp  graph_compile_options.cpp  graph_extended.cpp  graph_manager.cpp  graph_node.cpp  graph_run.cpp  graph_validation.cpp  introspect.cpp  pregel.cpp  runnable.cpp  state.cpp  state_handler.cpp  stream_concat.cpp  stream_convert.cpp  stream_reader.cpp  tool_node.cpp  type_registry.cpp  types_lambda.cpp  utils.cpp  value_merge.cpp  values_merge.cpp  workflow.cpp
src/flow/: BUILD.bazel  CMakeLists.txt  multi_query_retriever.cpp  parent_indexer.cpp  parent_retriever.cpp  react_agent.cpp  router_retriever.cpp
src/internal/: BUILD.bazel  CMakeLists.txt  concat.cpp  merge.cpp  serialization.cpp
src/schema/: BUILD.bazel  CMakeLists.txt  document.cpp  message.cpp  message_concat.cpp  message_format.cpp  message_parser.cpp  serialization.cpp  stream_copy.cpp  tool.cpp  types.cpp
tests/: BUILD.bazel  CMakeLists.txt  adk_validation.cpp  components_simple_test.cpp  components_test.cpp  compose_validation.cpp  graph_add_branch_edge_test.cpp  graph_addedge_validation_test.cpp  graph_branch_node_multi_reference_test.cpp  graph_build_validation.cpp  graph_validation_test.cpp  simple_test_runner.py  test_new_graph_runner.cpp
tests/adk/: CMakeLists.txt  react_test.cpp  supervisor_test.cpp  task_tool_test.cpp
tests/internal/: channel_test.cpp  concat_test.cpp  gmap_test.cpp  gslice_test.cpp
tests/schema/: stream_alignment_test.cpp  stream_copy_test.cpp  tool_jsonschema_test.cpp
(+47 files in other folders)
