# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# adk - Agent Development Kit (core)
# Aligned with Go package: github.com/cloudwego/eino/adk
#
# Go source files:
#   adk/agent_tool.go, adk/call_option.go, adk/callback.go,
#   adk/chatmodel.go, adk/config.go, adk/deterministic_transfer.go,
#   adk/flow.go, adk/handler.go, adk/instruction.go, adk/interface.go,
#   adk/interrupt.go, adk/react.go, adk/runctx.go, adk/runner.go,
#   adk/utils.go, adk/workflow.go, adk/wrappers.go
# ============================================================================

cc_library(
    name = "adk",
    srcs = [
        "agent.cpp",
        "agent_tool.cpp",
        "call_options.cpp",
        "callbacks.cpp",
        "chat_model_agent.cpp",
        "checkpoint.cpp",
        "context.cpp",
        "deterministic_transfer.cpp",
        "executor.cpp",
        "flow.cpp",
        "flow_agent.cpp",
        "instruction.cpp",
        "interface.cpp",
        "interrupt.cpp",
        "prompts.cpp",
        "react.cpp",
        "runctx.cpp",
        "runner.cpp",
        "session.cpp",
        "stream_utils.cpp",
        "task_tool.cpp",
        "tools.cpp",
        "types.cpp",
        "utils.cpp",
        "utils_missing.cpp",
        "workflow.cpp",
    ],
    deps = [
        "//include/eino:adk_hdrs",
        "//src/callbacks",
        "//src/components",
        "//src/compose",
        "//src/flow",
        "//src/schema",
        "//include:nlohmann_json",
    ],
)
