# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# callbacks - Callback system for component lifecycle hooks
# Aligned with Go package: github.com/cloudwego/eino/callbacks
#
# Go source files:
#   callbacks/aspect_inject.go, callbacks/handler_builder.go,
#   callbacks/interface.go, etc.
# ============================================================================

cc_library(
    name = "callbacks",
    srcs = [
        "callback.cpp",
        "handler_builder.cpp",
        "manager.cpp",
    ],
    deps = [
        "//include/eino:callbacks_hdrs",
        "//src/schema",
    ],
)
