# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# components - Component interfaces (ChatModel, Tool, Retriever, Embedder, etc.)
# Aligned with Go package: github.com/cloudwego/eino/components
#
# Go sub-packages:
#   components/document, components/embedding, components/indexer,
#   components/model, components/prompt, components/retriever, components/tool
# ============================================================================

cc_library(
    name = "components",
    srcs = [
        "interface.cpp",
        "openai_chat_model.cpp",
        "prompt.cpp",
        "simple_embedder.cpp",
        "simple_loader.cpp",
        "text_splitter.cpp",
    ],
    deps = [
        "//include/eino:components_hdrs",
        "//src/callbacks",
        "//src/schema",
        "//include:nlohmann_json",
    ],
)
