# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# compose - Graph composition engine (Graph, Chain, Branch, Workflow, etc.)
# Aligned with Go package: github.com/cloudwego/eino/compose
#
# Go source files:
#   compose/graph.go, compose/chain.go, compose/branch.go,
#   compose/graph_run.go, compose/workflow.go, compose/tool_node.go,
#   compose/checkpoint.go, compose/state.go, etc.
# ============================================================================

cc_library(
    name = "compose",
    srcs = [
        "branch.cpp",
        "branch_node.cpp",
        "chain.cpp",
        "chain_branch.cpp",
        "chain_parallel.cpp",
        "checkpoint.cpp",
        "component_to_graph_node.cpp",
        "dag.cpp",
        "error.cpp",
        "field_mapping.cpp",
        "generic_graph.cpp",
        "generic_helper.cpp",
        "graph.cpp",
        "graph_add_node_options.cpp",
        "graph_addedge.cpp",
        "graph_call_options.cpp",
        "graph_compile_options.cpp",
        "graph_extended.cpp",
        "graph_manager.cpp",
        "graph_node.cpp",
        "graph_run.cpp",
        "graph_validation.cpp",
        "introspect.cpp",
        "pregel.cpp",
        "runnable.cpp",
        "state.cpp",
        "state_handler.cpp",
        "stream_concat.cpp",
        "stream_convert.cpp",
        "stream_reader.cpp",
        "tool_node.cpp",
        "type_registry.cpp",
        "types_lambda.cpp",
        "utils.cpp",
        "value_merge.cpp",
        "values_merge.cpp",
        "workflow.cpp",
    ],
    deps = [
        "//include/eino:compose_hdrs",
        "//src/callbacks",
        "//src/components",
        "//src/internal",
        "//src/schema",
        "//include:nlohmann_json",
    ],
)
