# Copyright 2025 CloudWeGo Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# ============================================================================
# flow - Pre-built flows (ReAct agent, retriever flows, indexer flows)
# Aligned with Go package: github.com/cloudwego/eino/flow
#
# Go sub-packages:
#   flow/agent (react agent)
#   flow/indexer (parent indexer)
#   flow/retriever (multi-query, parent, router retrievers)
# ============================================================================

cc_library(
    name = "flow",
    srcs = [
        "multi_query_retriever.cpp",
        "parent_indexer.cpp",
        "parent_retriever.cpp",
        "react_agent.cpp",
        "router_retriever.cpp",
    ] + glob(["retriever/*.cpp"]),
    deps = [
        "//include/eino:flow_hdrs",
        "//src/components",
        "//src/compose",
        "//src/schema",
    ],
)
